--- a/src/translations/en/common.json
+++ b/src/translations/en/common.json
@@ -65,6 +65,7 @@
     "putty": "Putty",
     "member": "Member",
     "contact": "Contact",
+    "news": "News",
     "productList": "Product List"
   },
   "breadcrumbs": {
