--- a/src/translations/vi/common.json
+++ b/src/translations/vi/common.json
@@ -65,6 +65,7 @@
     "putty": "Bột trét",
     "member": "Thành Viên",
     "contact": "Liên hệ",
+    "news": "Tin tức",
     "productList": "Danh sách sản phẩm"
   },
   "breadcrumbs": {
